# terraform-mlops-pipeline

./: .env.example  .gitignore  Makefile  README.md  README_zh-TW.md  main.py  pyproject.toml
.github/workflows/: deploy.yml
docs/: api_usage_zh-TW.md  architecture.md  architecture_zh-TW.md  aws_iam_setup.md  aws_iam_setup_zh-TW.md  cicd.md  cicd_zh-TW.md  decisions.md  decisions_zh-TW.md  design_event_driven.md  inference_deployment_zh-TW.md  terraform.md  terraform_zh-TW.md  training_process_zh-TW.md
inference/: Dockerfile  app.py  go.mod  go.sum  main.go  requirements.txt
infra/: main.tf  outputs.tf  providers.tf  variables.tf
infra/modules/api_gateway/: main.tf  outputs.tf  variables.tf
infra/modules/budgets/: main.tf  variables.tf
infra/modules/cloudwatch/: main.tf  outputs.tf
infra/modules/dynamodb/: main.tf  outputs.tf
infra/modules/ecr/: main.tf
infra/modules/iam/: main.tf
infra/modules/lambda/: main.tf  outputs.tf  variables.tf
infra/modules/s3/: main.tf  outputs.tf
registry/: schema.md
scripts/: debug_train_and_export.py  fetch_stock_data.py
tests/: data.csv  generate_sample_data.py  test_inference_local.py  test_train_local.py
training/: Dockerfile  requirements.txt  train.py
