[project]
name = "terraform-mlops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.42.49",
    "joblib>=1.5.3",
    "scikit-learn>=1.6.1",
    "numpy<2",
]

[project.optional-dependencies]
training = [
    "pandas>=2.3.3",
    "ta>=0.11.0",
    "yfinance>=1.1.0",
    "skl2onnx>=1.17.0",
]
